# colormath

./: CMakeLists.txt  LICENSE  Makefile  README.md  colors.h  conversions.c  conversions.h  utils.c  utils.h
include/: colors.h  utils.h
src/: conversions.c  utils.c
